<resources>
    <string name="app_name">"Ghatanji Online"</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product">Indica Model 2017</string>
    <string name="demo_description">All types of electrical repair , installation , fitting , underground fitting, new house electrical fitting , mixer repair , fan repair , motor pump repair , and all electrical maintainenece work.</string>
    <string name="all_categories">सर्व कॅटेगरीज</string>
    <string name="owner">मालक</string>
    <string name="driver">ड्रायव्हर</string>
    <string name="rating">रेटिंग</string>
    <string name="inquiry">चौकशी करा</string>
    <string name="book_now">बुक करा</string>
    <string name="review">रिव्हु</string>
    <string name="related_products">अधिक पर्याय</string>
    <string name="address">पत्ता</string>
    <string name="reg_no">रजि.नंबर</string>
    <string name="model">मॉडल</string>
    <string name="other">इतर</string>
    <string name="mo_no">मोबाईल नंबर</string>
    <string name="shop">दुकान</string>
    <string name="education">शिक्षण</string>
    <string name="experience">अनुभव</string>
    <string name="age">इतर</string>
    <string name="description">माहिती</string>
    <string name="details">सविस्तर माहिती</string>
    <string name="buy">खरेदी करा</string>
    <string name="addToCart">खरेदी लिस्ट मधे जोडा</string>
    <string name="sign_in_info_otp">आपल्या मोबाइल नंबर वर ओटिपी कोड असणारा मेसेज येइल</string>
    <string name="sign_in_sms_charges">ओटिपी कोड असणारा मेसेज पाठवण्यासाठी एसएमएस चार्जेस लागू शकते.</string>
</resources>
