<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@null">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <ImageView
                android:id="@+id/services_detail_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@color/orange"
                android:padding="10dp"
                app:layout_columnSpan="2"
                app:srcCompat="@drawable/sample_profile_pic" />

            <TextView
                android:id="@+id/services_detail_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Suchita Mahalley"
                android:textAppearance="@style/text_button"
                app:layout_columnSpan="2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/text_button"
                app:layout_columnSpan="2" />

            <TextView
                android:id="@+id/services_detail_type_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Electrician"
                android:textAppearance="@style/text_button"
                android:textColor="@color/orange"
                app:layout_columnSpan="2" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:background="#D7CCC8"
                app:layout_columnSpan="2" />

            <TextView
                android:id="@+id/services_detail_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_assignment_black_24dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/demo_description"
                android:textSize="18sp"
                app:layout_columnSpan="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/orange"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/address"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/services_detail_address_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@android:color/white"
                android:paddingBottom="4dp"
                android:paddingLeft="25dp"
                android:paddingTop="4dp"
                android:text="Vasant nagar,Ghatanji."
                android:textSize="18sp"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/orange"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/mo_no"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/services_detail_mono_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:paddingBottom="4dp"
                android:paddingLeft="25dp"
                android:paddingTop="4dp"
                android:text="1111111111"
                android:textSize="18sp"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/services_detail_shop_lable_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/orange"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/shop"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/services_detail_shop_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:paddingBottom="4dp"
                android:paddingLeft="25dp"
                android:paddingTop="4dp"
                android:text="Shivaji Chowk, Ghatanji"
                android:textSize="18sp"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/services_detail_education_lable_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/orange"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/education"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/services_detail_education_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:paddingBottom="4dp"
                android:paddingLeft="25dp"
                android:paddingTop="4dp"
                android:text="ITI"
                android:textSize="18sp"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/services_detail_experience_lable_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/orange"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/experience"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/services_detail_experience_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:paddingBottom="4dp"
                android:paddingLeft="25dp"
                android:paddingTop="4dp"
                android:text="5 years"
                android:textSize="18sp"
                app:layout_columnWeight="1" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.16"
                android:background="@android:color/black"
                app:layout_columnSpan="2" />

            <FrameLayout
                android:id="@+id/services_detail_common_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_columnSpan="2">

            </FrameLayout>

        </android.support.v7.widget.GridLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_detail_button_enquiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0186D5"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/inquiry"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/product_detail_button_booknow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/book_now"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>