<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context="com.nexm.ghatanjionline.fragments.ProductDetailFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager_procuct_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                android:paddingTop="10dp">

            </androidx.viewpager.widget.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/indicator_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/selected_dot" />

                <ImageView
                    android:id="@+id/indicator_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/default_dot" />

                <ImageView
                    android:id="@+id/indicator_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/default_dot" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.16"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/product_detail_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs. 8 / km"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:scaleType="center"
                app:srcCompat="@drawable/triangle" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/owner"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/driver"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/rating"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/product_detail_owner_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/sample_profile_pic" />

                    <ImageView
                        android:id="@+id/product_detail_driver_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/sample_profile_pic" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_grade_black_24dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/product_detail_owner_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Gajanan\nMahalley"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/product_detail_driver_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Nimish\nMahalley"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/product_detail_ratings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="4.7"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/product_detail_owner_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="8087557014"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/product_detail_driver_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="7775971543"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/product_detail_no_of_users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="(100)"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </TableRow>

            </TableLayout>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.16"
                android:background="@android:color/black" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/address"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/product_detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Vasant nagar , Ghatanji."
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/model"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/product_detail_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="2016"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/reg_no"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/product_detail_reg_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Mh- 29 P- 1111"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/other"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/product_detail_destinations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="All India"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.16"
                android:background="@android:color/black" />

            <FrameLayout
                android:id="@+id/common_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_detail_button_enquiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0186D5"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/inquiry"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/product_detail_button_booknow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/book_now"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>
